# batesstocks

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BLOOMBERG_REBUILD_PLAN.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
backend/: data_manipulation.py  data_pull.py  database.py  models.py
backend/api/: __init__.py  terminal.py
backend/core/: __init__.py  config.py  duckdb.py
backend/data/: sp500_constituents.txt
backend/queries/: __init__.py  backtest.py  common.py  dashboard.py  monitor.py  security.py  strategy.py
backend/services/: __init__.py  backup_service.py  data_sync_service.py  earnings_service.py  market_universe.py  news_service.py  quote_cache.py  response_cache.py  sync_scheduler.py  sync_status.py  terminal_service.py
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.tsx  main.tsx  metricsList.js  styles.css
frontend/src/api/: client.ts  query.ts  types.ts
frontend/src/components/: AiPanel.js  AiPanel.tsx  CommandPalette.js  CorrelationMatrix.js  KeyboardShortcutsHelp.js  MarketClock.js  NavBar.js  PresetManager.js  RadarChart.js  SearchBar.js  SearchBar.tsx  StockChart.js  TechnicalSummary.js
frontend/src/components/app/: AppErrorBoundary.tsx  BreadthStrip.tsx  DeltaPill.tsx  EmptyState.tsx  MetricCell.tsx  PanelHeader.tsx  ReturnLadder.tsx  SignalStack.tsx
frontend/src/components/charts/: CandleChart.tsx  TerminalChart.tsx
frontend/src/components/command/: CommandBar.tsx
frontend/src/components/layout/: TerminalShell.tsx  WorkspaceRail.tsx
frontend/src/components/news/: NewsPanel.tsx
frontend/src/components/strategy/: StrategyWorkbench.tsx
frontend/src/contexts/: AiContext.tsx
frontend/src/features/strategies/: config.ts
frontend/src/hooks/: useApi.ts  useSessionId.js  useSessionId.ts
frontend/src/lib/: commands.ts  demoMarket.ts  formatters.ts  storage.ts  strategy.ts
frontend/src/pages/: AlertsPage.tsx  BacktestPage.js  BacktestPage.tsx  CalendarPage.js  CalendarPage.tsx  CompanyPage.js  CompanyPage.tsx  ComparePage.tsx  DashboardPage.tsx  HeatmapPage.js  HeatmapPage.tsx  HomePage.js  MarketPage.js  MarketPage.tsx  MonitorPage.tsx  NewsMonitorPage.tsx  PortfolioPage.tsx  ScreenerPage.js  ScreenerPage.tsx  SectorPage.tsx  SecurityPage.tsx  WatchlistPage.js  WatchlistPage.tsx  WatchlistsPage.tsx
frontend/src/state/: terminalStore.ts
frontend/src/styles/: terminal.css
frontend/tests/e2e/: ai-panel.spec.ts  app.spec.ts  commandbar.spec.ts  compare.spec.ts  monitor.spec.ts  rail.spec.ts  screener.spec.ts  watchlists.spec.ts
tests/: test_ai_runtime.py  test_data_manipulation.py  test_data_pull.py  test_data_sync_service.py  test_news_service.py  test_runtime.py  test_signals.py  test_sync_scheduler.py  test_terminal_service.py
